@@ -419,7 +419,6 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>com.google.errorprone</groupId>
@@ -570,7 +569,7 @@
 							<goal>install-node-and-yarn</goal>
 						</goals>
 						<configuration>
-							<nodeVersion>v22.13.0</nodeVersion>
+							<nodeVersion>v24.14.1</nodeVersion>
 							<yarnVersion>v1.22.22</yarnVersion>
 							<installDirectory>${project.basedir}/src/main/spa-frontend</installDirectory>
 						</configuration>
@@ -718,7 +717,6 @@
 						<configuration>
 							<skipTests>false</skipTests>
 							<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
-								--enable-preview
 							</argLine>
 						</configuration>
 					</plugin>
@@ -803,9 +801,7 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
 							<skipTests>false</skipTests>
-							<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
-								--enable-preview
-							</argLine>
+							<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
